syntax = "proto3";
package api;
option go_package = "github.com/bloXroute-Labs/serum-api/api";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";
import "google/api/visibility.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service Api {
  rpc GetMarkets(GetMarketsRequest) returns (GetMarketsResponse) {
    option(google.api.http) = {
      get: "/api/v1/market/markets"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Returns the list of supported markets";
      summary: "Supported markets";
      tags: "Market";
    };
  }

  rpc GetTickers(GetTickersRequest) returns (GetTickersResponse) {
    option(google.api.http) = {
      get: "/api/v1/market/tickers/{market}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Returns updated ticker(s). To receive all tickers use empty string for {market} param value";
      summary: "List of tickers";
      tags: "Market";
    };
  }

  rpc GetKline(GetKlineRequest) returns (GetKlineResponse) {
    option (google.api.method_visibility).restriction = "INTERNAL";
    option(google.api.http) = {
      get: "/api/v1/market/kline/{market}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Returns the KLine per market";
      summary: "Market KLine";
      tags: "Market";
    };
  }

  rpc GetOrderbook(GetOrderBookRequest) returns (GetOrderbookResponse) {
    option (google.api.http) = {
      get: "/api/v1/market/orderbooks/{market}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Returns market's orderbook. Use limit param to reduce the number of bids/asks returned";
      summary: "Market orderbook";
      tags: "Market";
    };
  }

  rpc GetTrades(GetTradesRequest) returns (GetTradesResponse) {
    option (google.api.http) = {
      get: "/api/v1/market/trades/{market}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Returns recent trades on the market";
      summary: "Market trades";
      tags: "Market";
    };
  }


  rpc GetServerTime(GetServerTimeRequest) returns (GetServerTimeResponse) {
    option (google.api.http) = {
      get: "/api/v1/system/time"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Returns current time on the server";
      summary: "Server time";
      tags: "System";
    };
  }

  // account endpoints
  rpc GetAccountBalance(GetAccountBalanceRequest) returns (GetAccountBalanceResponse) {
    option (google.api.method_visibility).restriction = "INTERNAL";
    option (google.api.http) = {
      get: "/api/v1/account/balance"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Returns the all balances for a wallet";
      summary: "Account balances markets";
      tags: "Account";
    };
  }

  // trade endpoints
  rpc PostOrder(PostOrderRequest) returns (PostOrderResponse) {
    option (google.api.http) = {
      post: "/api/v1/trade/place"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Generates a NewOrderV3 unsigned transaction object";
      summary: "Unsigned NewOrderV3 transaction";
      tags: "Trade";
    };
  }

  rpc PostSubmit(PostSubmitRequest) returns (PostSubmitResponse) {
    option (google.api.http) = {
      post: "/api/v1/trade/submit"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Submits a signed transaction";
      summary: "Transaction submit";
      tags: "Trade";
    };
  }

  rpc PostCancelOrder(PostCancelOrderRequest) returns (PostCancelOrderResponse) {
    option (google.api.http) = {
      post: "/api/v1/trade/cancel"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Generates a CancelOrder unsigned transaction object";
      summary: "Unsigned CancelOrder transaction";
      tags: "Trade";
    };
  }

  rpc PostCancelByClientOrderID(PostCancelByClientOrderIDRequest) returns (PostCancelOrderResponse) {
    option (google.api.http) = {
      post: "/api/v1/trade/cancelbyid"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Generates a CancelOrderByID unsigned transaction object";
      summary: "Unsigned CancelOrderByID transaction";
      tags: "Trade";
    };
  }

  rpc PostCancelAll(PostCancelAllRequest) returns (PostCancelAllResponse) {
    option (google.api.http) = {
      post: "/api/v1/trade/cancelall"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Generates a CancelAll unsigned transaction object";
      summary: "Unsigned CancelAll transaction";
      tags: "Trade";
    };
  }

  rpc PostSettle(PostSettleRequest) returns (PostSettleResponse) {
    option (google.api.http) = {
      post: "/api/v1/trade/settle"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Generates a SettleFunds unsigned transaction object";
      summary: "Unsigned SettleFunds transaction";
      tags: "Trade";
    };
  }

  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse) {
    option (google.api.method_visibility).restriction = "INTERNAL";
    option (google.api.http) = {
      get: "/api/v1/trade/orders/{market}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Returns all user's orders";
      summary: "List of user's orders";
      tags: "Trade";
    };
  }

  rpc GetOpenOrders(GetOpenOrdersRequest) returns (GetOpenOrdersResponse) {
    option (google.api.http) = {
      get: "/api/v1/trade/openorders/{market}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Returns the list of open orders per user per market";
      summary: "List of user's open orders";
      tags: "Trade";
    };
  }

  rpc GetOrderByID(GetOrderByIDRequest) returns (GetOrderByIDResponse) {
    option (google.api.http) = {
      get: "/api/v1/trade/orderbyid/{orderID}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Returns an order by ID";
      summary: "Order by ID";
      tags: "Trade";
    };
  }

  rpc GetUnsettled(GetUnsettledRequest) returns (GetUnsettledResponse) {
    option (google.api.http) = {
      get: "/api/v1/trade/unsettled/{market}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Returns the unsettled amounts of user in a market";
      summary: "Unsettled amounts";
      tags: "Trade";
    };
  }

  // streaming endpoints
  rpc GetOrderbooksStream(GetOrderBookRequest) returns (stream GetOrderbooksStreamResponse) {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Trade";
    };
  }

  rpc GetTickersStream(GetTickersRequest) returns (stream GetTickersStreamResponse) {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Trade";
    };
  }

  rpc GetMarketDepthStream(GetMarketsRequest) returns (stream GetMarketDepthStreamResponse) {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Trade";
    };
  }

  rpc GetTradesStream(GetTradesRequest) returns (stream GetTradesStreamResponse) {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Trade";
    };
  }
}

message GetMarketsRequest {
}

message GetMarketsResponse {
  map<string, Market> markets = 1;
}

message Market {
  string market = 1;
  MarketStatus status = 2;
  string address = 3;
}

enum MarketStatus {
  MS_UNKNOWN = 0;
  MS_ONLINE = 1;
}

message GetTickersRequest {
  string market = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "Use empty string for all markets"}];
}

message GetTickersResponse {
  repeated Ticker tickers = 1;
}

message Ticker {
  string market = 1;
  string marketAddress = 2;
  double bid = 3;
  double bidSize = 4;
  double ask = 5;
  double askSize = 6;
}

message GetKlineRequest {
  string market = 1;
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
  string resolution = 4; // indicates a duration: e.g. 1d, 4h, 1h, 30m, 15m, 1m
  uint32 limit = 5;
}

message GetKlineResponse {
  string market = 1;
  google.protobuf.Timestamp timestamp = 2;
  repeated Candle candles = 3;
}

message Candle {
  google.protobuf.Timestamp startTime = 1;
  google.protobuf.Timestamp updateTime = 2;
  double open = 3;
  double close = 4;
  double low = 5;
  double high = 6;
  double amount = 7;
  double volume = 8;
  double count = 9;
}

message GetOrderBookRequest {
  string market = 1;
  uint32 limit = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "Use 0 for no limits"}];
}

message GetOrderbookResponse {
  string market = 1;
  string marketAddress = 2;
  repeated OrderbookItem bids = 3;
  repeated OrderbookItem asks = 4;
}

message OrderbookItem {
  double price = 1;
  double size = 2;
}

message GetTradesRequest {
  string market = 1;
  uint32 limit = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "Use 0 for no limits"}];
}

message GetTradesResponse {
  repeated Trade trades = 1;
}

message Trade {
  Side side = 1;
  double size = 2;
  double price = 3;
}

message GetServerTimeRequest {}

message GetServerTimeResponse {
  string timestamp = 1;
}

message GetAccountBalanceRequest {}

message GetAccountBalanceResponse {
  repeated TokenBalance tokens = 1;
}

message TokenBalance {
  string symbol = 1;
  double amount = 2;
}

message PostOrderRequest {
  string ownerAddress = 1 [(google.api.field_behavior) = REQUIRED];
  string payerAddress = 2 [(google.api.field_behavior) = REQUIRED];
  string market = 3 [(google.api.field_behavior) = REQUIRED];
  Side side = 4 [(google.api.field_behavior) = REQUIRED];
  repeated OrderType type = 5 [(google.api.field_behavior) = REQUIRED];
  double amount = 6 [(google.api.field_behavior) = REQUIRED];
  double price = 7 [(google.api.field_behavior) = REQUIRED];
  string openOrdersAddress = 8 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "If left empty the Serum API will lookup the account which can be time consuming"}];
  uint64 clientOrderID = 9 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "Client defined OrderID"}];
}

enum Side {
  S_UNKNOWN = 0;
  S_BID = 1;
  S_ASK = 2;
}

enum OrderType {
  OT_MARKET = 0;
  OT_LIMIT = 1; // MARKET and LIMIT are mutually exclusive
  OT_IOC = 2; // immediate or cancel
  OT_POST = 3;
}

message PostOrderResponse {
  string transaction = 1;
  string openOrdersAddress = 2;
}

message PostCancelOrderRequest {
  string orderID = 1 [(google.api.field_behavior) = REQUIRED];
  Side side = 2 [(google.api.field_behavior) = REQUIRED];
  string marketAddress = 3 [(google.api.field_behavior) = REQUIRED];
  string ownerAddress = 4 [(google.api.field_behavior) = REQUIRED];
  string openOrdersAddress = 5 [(google.api.field_behavior) = REQUIRED];
}

message PostCancelByClientOrderIDRequest {
  uint64 clientOrderID = 1 [(google.api.field_behavior) = REQUIRED];
  string marketAddress = 2 [(google.api.field_behavior) = REQUIRED];
  string ownerAddress = 3 [(google.api.field_behavior) = REQUIRED];
  string openOrdersAddress = 4 [(google.api.field_behavior) = REQUIRED];
}

message PostCancelOrderResponse {
  string transaction = 1;
}

message PostCancelAllRequest {
  string market = 1 [(google.api.field_behavior) = REQUIRED];
  string ownerAddress = 2 [(google.api.field_behavior) = REQUIRED];
  string openOrderAddress = 3;
}

message PostCancelAllResponse {
  repeated string transactions = 1;
}

message PostSettleRequest {
  string ownerAddress = 1 [(google.api.field_behavior) = REQUIRED];
  string market = 2 [(google.api.field_behavior) = REQUIRED];
  string baseTokenWallet = 3 [(google.api.field_behavior) = REQUIRED];
  string quoteTokenWallet = 4 [(google.api.field_behavior) = REQUIRED];
  string openOrdersAddress = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "If left empty the Serum API will lookup the account which can be time consuming"}];
}

message PostSettleResponse {
  string transaction = 1;
}

message Settlement {
  string symbol = 1;
  double unsettled = 2;
  double amount = 3;
}

message GetOrdersRequest {
  string market = 1;
  OrderStatus status = 2;
  Side side = 3;
  repeated OrderType types = 4;
  google.protobuf.Timestamp from = 5;
  uint32 limit = 6;
  Direction direction = 7;
  string address = 8;
}

enum OrderStatus {
  OS_UNKNOWN = 0;
  OS_OPEN = 1;
  OS_PARTIAL_FILL = 2;
  OS_FILLED = 3;
  OS_CANCELLED = 4;
  OS_PENDING = 5;
}

enum Direction {
  D_ASCENDING = 0;
  D_DESCENDING = 1;
}

message GetOrdersResponse {
  repeated Order orders = 1;
}

message Order {
  string orderID = 1;
  string market = 2;
  Side side = 3;
  repeated OrderType types = 4;
  double price = 5;
  double remainingSize = 6;
  google.protobuf.Timestamp createdAt = 7;
  string clientOrderID = 8;
  string openOrderAccount = 9;
}

message PostSubmitRequest {
  string transaction = 1 [(google.api.field_behavior) = REQUIRED];
  bool skipPreFlight = 2;
}

message PostSubmitResponse {
  string signature = 1;
}

message GetOpenOrdersRequest {
  string market = 1 [(google.api.field_behavior) = REQUIRED];
  uint32 limit = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "Use 0 for no limits"}];
  string address = 3 [(google.api.field_behavior) = REQUIRED];
}

message GetOpenOrdersResponse {
  repeated Order orders = 1;
}

message GetOrderByIDRequest {
  string orderID = 1 [(google.api.field_behavior) = REQUIRED];
  string market = 2;
}

message GetOrderByIDResponse {
  Order order = 1;
}

message GetUnsettledRequest {
  string market = 1 [(google.api.field_behavior) = REQUIRED];
  string owner = 2 [(google.api.field_behavior) = REQUIRED];
}

message UnsettledAccountToken {
  string address = 1;
  double amount = 2;
}

message UnsettledAccount {
  string account = 1;
  UnsettledAccountToken baseToken = 2;
  UnsettledAccountToken quoteToken = 3;
}

message GetUnsettledResponse {
  string market = 1;
  repeated UnsettledAccount unsettled = 2;
}

message GetOrderbooksStreamResponse {
  int64 blockHeight = 1;
  GetOrderbookResponse orderbook = 2;
}

message GetTickersStreamResponse {
  int64 blockHeight = 1;
  GetTickersResponse ticker = 2;
}

message GetMarketDepthRequest {
  string market = 1 [(google.api.field_behavior) = REQUIRED];
  int32 depth = 2 [(google.api.field_behavior) = REQUIRED];
  Step step = 3;
}

enum Step {
  STEP0 = 0;
  STEP1 = 1;
  STEP2 = 2;
  STEP3 = 3;
}

message GetMarketDepthStreamResponse {
  int64 blockHeight = 1;
  MarketDepthTick tick = 2;
}

message MarketDepthTick {
  int64 prevBlockHeight = 1;
  repeated OrderbookItem asks = 2;
  repeated OrderbookItem bids = 3;
}

message GetTradesStreamResponse {
  int64 blockHeight = 1;
  GetTradesResponse trades = 2;
}
